--- a/ui/package.json
+++ b/ui/package.json
@@ -8,6 +8,10 @@
     "animate.css": "^3.5.2",
     "clean-webpack-plugin": "^0.1.16",
     "css-loader": "^0.28.4",
+    "babel-core": "^6.25.0",
+    "babel-loader": "^7.1.1",
+    "babel-preset-env": "^1.6.0",
+    "babel-preset-es2015": "^6.24.1",
     "elm": "^0.18.0",
     "elm-format": "^0.6.1-alpha",
     "elm-hot-loader": "^0.5.4",
