--- a/.travis.yml
+++ b/.travis.yml
@@ -3,11 +3,7 @@ language: java
 install: true
 
 script:
-  - df -h
-  - mvn compile
-  - df -h
-  - mvn test
-  - df -h
+  - ./mvnw test -B
 
 cache:
   directories:
