hopefully fix the painfully slow elm
https://github.com/elm-lang/elm-compiler/issues/1473#issuecomment-245704142

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,11 +1,20 @@
 language: java
 
-install: true
+cache:
+  directories:
+    - sysconfcpus
+    - $HOME/.m2
+    - $HOME/.cache/yarn
+install:
+  - |
+    if [ ! -d sysconfcpus/bin ];
+    then
+      git clone https://github.com/obmarg/libsysconfcpus.git; 
+      cd libsysconfcpus;
+      ./configure --prefix=$TRAVIS_BUILD_DIR/sysconfcpus;
+      make && make install;
+      cd ..;
+    fi
 
 script:
   - ./mvnw test -B
-
-cache:
-  directories:
-    - $HOME/.m2
-    - $HOME/.cache/yarn
