--- a/.travis.yml
+++ b/.travis.yml
@@ -15,7 +15,9 @@ install:
       make && make install;
       cd ..;
     fi
-
-script:
-  - $TRAVIS_BUILD_DIR/sysconfcpus/bin/sysconfcpus -n 2
-  - ./mvnw test -B
+jobs:
+  include:
+    - stage: build package
+      script:
+        - $TRAVIS_BUILD_DIR/sysconfcpus/bin/sysconfcpus -n 2
+        - ./mvnw package -B
